updated docs info

--- a/research/manual_test.ipynb
+++ b/research/manual_test.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "        <iframe\n",
        "            width=\"100%\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://www.programiz.com/python-programming/\"\n",
+       "            src=\"https://pytorch.org/\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -90,7 +90,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x103993280>"
+       "<IPython.lib.display.IFrame at 0x106753fd0>"
       ]
      },
      "metadata": {},
@@ -102,13 +102,13 @@
        "'success'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "URL = \"https://www.programiz.com/python-programming/\"\n",
+    "URL = \"https://pytorch.org/\"\n",
     "render_site(URL)"
    ]
   },
